--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "express": "^4.19.2",
     "express-ejs": "^2.0.0",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.3.2",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.3.2"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
